# ramses_rf

./: .deepsource.toml  .flake8  .gitignore  .hound.yml  .pre-commit-config.yaml  LICENSE  README-developers.md  README.md  client.py  diff.py  evoclient.py  puzzle.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_cli.txt  requirements_dev.txt  ser2net.yaml  setup.py  utils.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: check-lint.yml  check-mypy.yml  check-pytest.yml  check-test.yml  check-type.yml  lint-mypy.yml  lint-ruff.yml  publish-hatch.yml  publish-pypi.yml  test-pytest.yml
.tests/: tests.sh
circleci/: config.yml
evohome/: __init__.py  command.py  const.py  controller.py  devices.py  discovery.py  domains.py  entity.py  exceptions.py  logger.py  message.py  opentherm.py  packet.py  parsers.py  schedule.py  schema.py  ser2net.py  system.py  zones.py
evohome_rf/: __init__.py  address.py  command.py  const.py  devices.py  discovery.py  exceptions.py  helpers.py  logger.py  message.py  opentherm.py  packet.py  parsers.py  protocol.py  ramses.py  ramses_ii.py  schema.py  ser2net.py  system.py  systems.py  transport.py  version.py  zones.py
examples/: schedule.py
misc/: ser2net.yaml
ramses_rf/: __init__.py  address.py  bind_state.py  binding_fsm.py  command.py  const.py  devices.py  devices_base.py  devices_heat.py  devices_hvac.py  discovery.py  dispatcher.py  entities.py  entity.py  entity_base.py  exceptions.py  gateway.py  helpers.py  logger.py  message.py  opentherm.py  packet.py  parsers.py  processor.py  protocol.py  ramses.py  schedule.py  schema.py  schemas.py  systems.py  transport.py  version.py  zones.py
ramses_rf/device/: __init__.py  base.py  devices_base.py  devices_heat.py  devices_hvac.py  heat.py  hvac.py
ramses_rf/devices/: __init__.py  base.py  const.py  entity_base.py  heat.py  hvac.py
ramses_rf/protocol/: __init__.py  address.py  backports.py  command.py  const.py  exceptions.py  fingerprint.py  fingerprints.py  frame.py  helpers.py  logger.py  message.py  opentherm.py  packet.py  parsers.py  protocol.py  protocol_fsm.py  protocol_new.py  protocol_old.py  ramses.py  schedule.py  schema.py  schemas.py  transport.py  transport_fsm.py  transport_new.py  transport_old.py  version.py
ramses_rf/system/: __init__.py  faultlog.py  heat.py  hvac.py  schedule.py  systems_heat.py  systems_hvac.py  zones.py
src/misc-utils/: convert.py
src/ramses_cli/: __init__.py  client.py  debug.py  discovery.py
src/ramses_rf/: __init__.py  binding_fsm.py  const.py  database.py  discovery.py  dispatcher.py  entity_base.py  exceptions.py  gateway.py  helpers.py  schemas.py  version.py
src/ramses_tx/: __init__.py  address.py  command.py  const.py  exceptions.py  fingerprints.py  frame.py  gateway.py  helpers.py  logger.py  message.py  opentherm.py  packet.py  parsers.py  protocol.py  protocol_fsm.py  ramses.py  schemas.py  transport.py  typed_dicts.py  typing.py  version.py
test/: diff.py  test.sh
tests/: __init__.py  _test_apis_mock.py  _test_eavesdrop_device_class.py  _test_eavesdrop_dhw_sensor.py  _test_eavesdrop_htg_control.py  _test_eavesdrop_ufc_circuits.py  _test_eavesdrop_zone_sensors.py  _test_eavesdrop_zone_type.py  _test_get_schedule.py  _test_packets_bad.py  _test_parsers_wip.py  _test_performance_WIP.py  _test_rf_bind.py  _test_rf_faking_hvac.py  _test_schedule_get.py  _test_schedule_get_wip.py  _test_schedule_set.py  _test_schedule_set_WIP.py  _test_schedule_set_wip.py  _test_set_schedule.py  common.py  helpers.py  mock_gateway.py  test_apis_common.py  test_apis_common_WIP.py  test_apis_heat.py  test_apis_hvac.py  test_client.py  test_codes.py  test_devices.py  test_eavesdrop_dev_class.py  test_eavesdrop_device_class.py  test_eavesdrop_schema.py  test_engine.py  test_get_fan_param.py  test_helpers.py  test_idx_mutex.py  test_idx_mutex_.py  test_idx_mutex_wip.py  test_packets_bad.py  (+28 more)
tests/deprecated/: _test_apis_mock.py  _test_mock_binding_hvac.py  _test_mock_faking_heat.py  _test_mock_schedule.py  _test_packets_bad.py  _test_performance_WIP.py  common.py
tests/engine/: config.json
tests/fingerprints/: _gather.sh
tests/logs/: system_cache.json
tests/mock/: __init__.py  const.py  device.py  device_hvac.py  transport.py
tests/rf_engine/: config.json  config_heat.json  config_hvac.json
tests/schedule/: get_schedule.json  schedule.json
tests/schema/: schema_000.json  schema_001.json  schema_002.json  schema_003.json  schema_010.json  schema_100.json  schema_102.json  schema_103.json  schema_104.json  schema_105.json  schema_108.json  schema_109.json  schema_201.json  schema_202.json  schema_211.json  schema_213.json
tests/schemas/: schema_000.json  schema_001.json  schema_100.json  schema_102.json  schema_108.json  schema_210.json
tests/tests/: __init__.py  _test_packets_bad.py  _test_performance_WIP.py  _test_schedule_set_WIP.py  _test_state_mgt.py  helpers.py  test_api_faultlog.py  test_api_schedule.py  test_apis_binding.py  test_apis_common.py  test_apis_heat.py  test_apis_hvac.py  test_cli_utility.py  test_client.py  test_devices.py  (+11 more)
tests_deprecated/: _test_apis_mock.py  _test_mock_binding_hvac.py  _test_mock_faking_heat.py  _test_mock_faultlog.py  _test_mock_schedule.py  common.py
tests_rf/: _test_binding_fsm_old.py  _test_mock_binding_hvac.py  _test_mock_schedule.py  _test_old_schedule.py  _test_rf_binding.py  common.py  helpers.py  mocked_rf_common.py  test_binding_fsm.py  test_bindings.py  test_bindings_fsm.py  test_hgi_addr_WIP.py  test_hgi_addr_wip.py  test_hgi_behaviors.py  test_mock_faking_heat.py  test_old_binding_hvac.py  test_protocol_fsm.py  test_protocol_fsm2.py  test_rf_binding.py  test_rf_binding_hvac.py  test_rf_bindings.py  test_rf_bindings_fsm.py  test_rf_faking_heat.py  test_rf_network.py  test_rf_schedule.py  test_use_regex.py  test_use_regex_wip.py  test_virt_bindings.py  test_virt_bindings_fsm.py  test_virt_hgi_behaviors.py  test_virt_network.py  virtual_rf.py  virtual_rf_common.py
utils/: convert.py  diff.py  puzzle.py  slow.py  utils.py
(+171 files in other folders)
